# vlm_translator

./: .gitignore  AGENTS.md  README.md  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: laws.json  results.json
prompts/: default.txt
scripts/: build_llama_cpp.sh  run_llama_server.sh
src/: cli.py  config.py  llm.py  models.py  ontario_laws.py  pipeline.py  prompting.py
src/vlm_translator/: __init__.py  cli.py  config.py  llm.py  models.py  ontario_laws.py  pipeline.py  prompting.py
tests/: test_cache.py  test_config_and_prompting.py  test_llm.py  test_parser.py
