[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VLM_translator"
version = "0.1.0"
description = "Pipeline for parsing Ontario traffic laws and sending them to a llama.cpp LLM."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "respx>=0.21.0",
]

[project.scripts]
vlm-translator = "vlm_translator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
